--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "chitter-react",
   "version": "0.0.0",
   "private": true,
-  "main": "public/javascripts/components/Testing.js",
+  "main": "public/javascripts/app.js",
   "dependencies": {
-    "express": "~4.9.0",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
-    "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
+    "express": "~4.9.0",
     "jade": "~1.6.0",
-    "react": "^0.12.0"
+    "jquery": "^2.1.1",
+    "morgan": "~1.3.0",
+    "react": "^0.12.0",
+    "serve-favicon": "~2.1.3"
   },
   "devDependencies": {
     "browserify": "^6.2.0",
